--- a/config/pom.xml
+++ b/config/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.gasparbarancelli</groupId>
 	<artifactId>config</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>config</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -64,6 +64,28 @@
                     <target>14</target>
                 </configuration>
             </plugin>
+
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.6.0</version>
+				<configuration>
+					<from>
+						<image>openjdk:15-jdk-slim-buster</image>
+					</from>
+					<to>
+						<image>gasparbarancelli/microservices-config:${version}</image>
+					</to>
+					<container>
+						<jvmFlags>
+							<jvmFlag>-Xms128m</jvmFlag>
+							<jvmFlag>-Xmx256m</jvmFlag>
+						</jvmFlags>
+						<mainClass>com.gasparbarancelli.config.ConfigApplication</mainClass>
+					</container>
+				</configuration>
+			</plugin>
+
         </plugins>
 	</build>
 
