--- a/properties/application.properties
+++ b/properties/application.properties
@@ -1,1 +1,7 @@
-teste=softfocus
+eureka.client.serviceUrl.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
+eureka.instance.preferIpAddress=true
+
+spring.main.allow-bean-definition-overriding=true
+
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
