--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,37 @@ services:
     expose:
       - 6161
       - 8161
+
+  mysql:
+    container_name: mysql
+    image: mysql:5.7
+    restart: always
+    hostname: mysql
+    environment:
+      MYSQL_DATABASE: 'vendas'
+      MYSQL_USER: 'vendas'
+      MYSQL_PASSWORD: 'vendas123'
+      MYSQL_ROOT_PASSWORD: 'vendas123'
+    ports:
+      - 3307:3306
+    expose:
+      - "3307"
+
+  redis:
+    container_name: redis
+    image: redis
+    restart: always
+    hostname: redis
+    ports:
+      - 6379:6379
+    expose:
+      - 6379
+
+  trace:
+    container_name: trace
+    image: openzipkin/zipkin
+    restart: always
+    ports:
+      - 9411:9411
+    expose:
+      - 9411
